--- a/CSVReader/CSVReader.csproj
+++ b/CSVReader/CSVReader.csproj
@@ -52,20 +52,28 @@
     <Compile Include="CsvReader.Designer.cs">
       <DependentUpon>CsvReader.cs</DependentUpon>
     </Compile>
+    <Compile Include="WriteCSV.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadCSV.cs" />
+    <EmbeddedResource Include="CsvReader.de-DE.resx">
+      <DependentUpon>CsvReader.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CsvReader.fr-CA.resx">
+      <DependentUpon>CsvReader.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CsvReader.resx">
       <DependentUpon>CsvReader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
